Convert from ISO-8859-1 to UTF-8

--- a/docs/sources/copyright.tex
+++ b/docs/sources/copyright.tex
@@ -7,9 +7,9 @@
 Published by
 \begin{quote}
 Grupo STRAST\\
-Sistemas de Tiempo Real y Arquitectura de Sistemas Telem·ticos\\
+Sistemas de Tiempo Real y Arquitectura de Sistemas Telem√°ticos\\
 %\url{https://www.dit.upm.es/str}\\
-Universidad PolitÈcnica de Madrid\\
+Universidad Polit√©cnica de Madrid\\
 Madrid\\
 SPAIN
 \end{quote}
