--- a/docs/sources/introduction.tex
+++ b/docs/sources/introduction.tex
@@ -3,7 +3,7 @@
 \addcontentsline{toc}{chapter}{Introduction}
 %----------------------------------------------------------------------
 
-This document provides instructions for laboratory work in the field of embedded systems. The laboratory is part of the Data Handling course of the UPM Máster Universitario de Sistemas Espaciales (MUSE) program.
+This document provides instructions for laboratory work in the field of embedded systems. The laboratory is part of the Data Handling course of the UPM MÃ¡ster Universitario de Sistemas Espaciales (MUSE) program.
 The laboratory is based on a computer kit that is used to build a simplified version of a satellite on-board software system (OBSW). An instance of the laboratory kit will be made available to every student registered in the course during the laboratory session.
 
 Students are required to use their own personal computer, running Windows, MacOS, or GNU/Linux, to carry out the laboratory assignments. 
