--- a/docs/sources/title.tex
+++ b/docs/sources/title.tex
@@ -18,7 +18,7 @@ This report describes the second laboratory assignment of Data Handling course.
 \begin{center}
 %\rule{\textwidth}{1pt}\\[2\baselineskip]
 \textbf{\huge Data Handling}\\[\baselineskip]
-{\large M·ster Universitario en Sistemas Espaciales}\\[\baselineskip]
+{\large M√°ster Universitario en Sistemas Espaciales}\\[\baselineskip]
 \textbf{\Huge Native and Cross-Development Environment Work}\\[\baselineskip]
 {\large Version 1.0 --- \today}\\[\baselineskip]
 {\large\textsc{2nd student assignment}}
@@ -28,9 +28,9 @@ This report describes the second laboratory assignment of Data Handling course.
 
 \begin{center}\textsc{
 \rule{\textwidth}{1pt}\\
-Universidad PolitÈcnica de Madrid\\
+Universidad Polit√©cnica de Madrid\\
 Grupo STARST\\
-Sistemas de Tiempo Real y Arquitectura de Sistemas Telem·ticos\\}
+Sistemas de Tiempo Real y Arquitectura de Sistemas Telem√°ticos\\}
 \url{https://www.dit.upm.es/str}\\[1em]
 \rule{\textwidth}{1pt}\\
 \end{center}
