Add TeX headers

--- a/docs/sources/assignment2.tex
+++ b/docs/sources/assignment2.tex
@@ -1,4 +1,5 @@
-
+%!TEX root = manual.tex
+%===============================================================================
 \chapter{Install the cross-compilation tools}\label{ch:Assignment2}
 
 The aim is to get acquainted with the embedded computer board and to install and test the cross-compilation tools for GNAT that will be used to develop executable code for it.
