--- a/docs/sources/assignment6.tex
+++ b/docs/sources/assignment6.tex
@@ -1,3 +1,5 @@
+%!TEX root = manual.tex
+%===============================================================================
 \chapter{Real-time program}\label{ch:Assignment6}
 
 The next version of the housekeeping program includes real-time requirements and the use of a real-time clock to add a timestamp to the housekeeping data sent to the ground station, simulated by the serial connection to the host PC like in the previous assignment. The hardware connections and the use of a host terminal application remain the same.
