--- a/docs/sources/assignment7.tex
+++ b/docs/sources/assignment7.tex
@@ -1,3 +1,5 @@
+%!TEX root = manual.tex
+%===============================================================================
 \chapter{Real-time program with Attitude Control System}\label{ch:assignment7}
 
 The aim of this assignment is to validate the Attitude Control System (ACS) following the Processor In the Loop (PIL) approach. The real-time version of the On-Board Software (OBSW) is used with the ACS of the UPMSat-2 satellite. The ACS uses magnetic sensors and actuators, which is commonly known as magnetic attitude control (figure~\ref{fig:acs}).
