--- a/docs/sources/overview.tex
+++ b/docs/sources/overview.tex
@@ -1,4 +1,5 @@
-%----------------------------------------------------------------------
+%!TEX root = manual.tex
+%===============================================================================
 \chapter*{Overview}\label{ch:overview}
 \addcontentsline{toc}{chapter}{Overview}
 %----------------------------------------------------------------------
