--- a/docs/sources/title.tex
+++ b/docs/sources/title.tex
@@ -1,17 +1,20 @@
+%!TEX root = manual.tex
+%===============================================================================
 \begin{titlepage}
 
-\begin{center}
+%\begin{center}
+%\framebox{
+%\begin{minipage}{100mm}
+%\begin{center}
+%\textbf{STRAST/UPM}
+%\end{center}
+%This report describes the second laboratory assignment of Data Handling course.
+%\end{minipage}
+%}
+%\end{center}
 
-\framebox{
-\begin{minipage}{100mm}
-\begin{center}
-\textbf{STRAST/UPM}
-\end{center}
+\includegraphics[height=20mm]{MUSE}\hfill \includegraphics[height=20mm]{UPM}
 
-This report describes the second laboratory assignment of Data Handling course.
-\end{minipage}
-}
-\end{center}
 
 \vfill\vspace{50pt}
 
@@ -20,7 +23,7 @@ This report describes the second laboratory assignment of Data Handling course.
 \textbf{\huge Data Handling}\\[\baselineskip]
 {\large Máster Universitario en Sistemas Espaciales}\\[\baselineskip]
 \textbf{\Huge Native and Cross-Development Environment Work}\\[\baselineskip]
-{\large Version 1.0 --- \today}\\[\baselineskip]
+{\large Version 1.2 --- \today}\\[\baselineskip]
 {\large\textsc{2nd student assignment}}
 \end{center}
 
@@ -29,7 +32,7 @@ This report describes the second laboratory assignment of Data Handling course.
 \begin{center}\textsc{
 \rule{\textwidth}{1pt}\\
 Universidad Politécnica de Madrid\\
-Grupo STARST\\
+Grupo STRAST\\
 Sistemas de Tiempo Real y Arquitectura de Sistemas Telemáticos\\}
 \url{https://www.dit.upm.es/str}\\[1em]
 \rule{\textwidth}{1pt}\\
