--- a/docs/sources/assignment1.tex
+++ b/docs/sources/assignment1.tex
@@ -1,7 +1,8 @@
-
+%!TEX root = manual.tex
+%===============================================================================
 \chapter{Install a native programming environment}\label{ch:Assignment1}
 
-The aim is to install a native programming environment for the Ada language on the student PC. This environment will later be extended with cross-compilation tools for the STM32 board to be used in the laboratory. 
+The aim of this assignment is to install a native programming environment for the Ada language on the student PC. This environment will later be extended with cross-compilation tools for the STM32 board to be used in the laboratory. 
 
 The programming environment to be used is GNAT Community, an open-source software development environment freely available from AdaCore, a company specialised in providing tools and solutions for developing high-integrity software,
 \section{Download and install GNAT}
