--- a/docs/sources/assignment3.tex
+++ b/docs/sources/assignment3.tex
@@ -1,3 +1,5 @@
+%!TEX root = manual.tex
+%===============================================================================
 \chapter{Simple housekeeping program}\label{ch:Assignment3}
 
 The aim of this assignment is to experiment with a simple housekeeping program that only implements a basic function, reading a temperature sensor on the on-board computer. The value read by the sensor is denoted as OBC\_T (OBC temperature).
