--- a/docs/sources/assignment4.tex
+++ b/docs/sources/assignment4.tex
@@ -1,3 +1,5 @@
+%!TEX root = manual.tex
+%===============================================================================
 \chapter{Tasking housekeeping program}\label{ch:Assignment4}
 
 The aim of this assignment is to extend the simple housekeeping program of the previous assignment by adding a communications subsystem. The extended system includes two concurrent tasks communicating through a protected shared object.
