--- a/docs/sources/assignment5.tex
+++ b/docs/sources/assignment5.tex
@@ -1,3 +1,5 @@
+%!TEX root = manual.tex
+%===============================================================================
 \chapter{Distributed housekeeping program}\label{ch:Assignment5}
 
 The two previous versions of the housekeeping program display the measured values on a debugger console. This means that the program must be run from the debugger, with the ST-LINK cable in place.
