--- a/docs/sources/obdh.tex
+++ b/docs/sources/obdh.tex
@@ -1,3 +1,5 @@
+%!TEX root = manual.tex
+%===============================================================================
 \chapter*{Final project \\\vspace{7mm} OBDH system}\label{ch:obdh}
 \addcontentsline{toc}{chapter}{OBDH system}
 \markboth{FINAL PROJECT. OBDH SYSTEM}{FINAL PROJECT. OBDH SYSTEM}
