Minor changes in figures and .tex

--- a/docs/sources/assignment2.tex
+++ b/docs/sources/assignment2.tex
@@ -69,7 +69,7 @@ The Ada Drivers Library is a set of Ada packages that make it easier to write so
 \end{enumerate}
 Open GPS and do the following:
 \begin{enumerate}
-\item Select {\tt Open} project on the welcome window. Navigate to .../OBDH\_LABS/\-Ada\_Drivers\_Library/examples/STMF4\_DISCO and open the project file: {\tt blinky\-\_f4disco.gpr}.
+\item Select {\tt Open} project on the welcome window. Navigate to .../OBDH\_LABS/\-Ada\_Drivers\_Li\-brary/\-examples/STMF4\_DISCO and open the project file: {\tt blinky\-\_f4disco.gpr}.
 \item	Build the executable and load it into the board by clicking on the \hbox{\includegraphics[width=1.5em]{buildandload.png}} symbol in the tool bar (or select {\tt Build} > {\tt Bareboard} > {\tt Flash to board} on the top menu). When the loading is complete, you will see the board LEDS blinking all at the same time.
 \end{enumerate}
 
