--- a/docs/sources/assignment3.tex
+++ b/docs/sources/assignment3.tex
@@ -36,7 +36,7 @@ The sensor has a range of -40 to 125 \degree{C}, with a precision of $\pm$1.5 \d
 \begin{center}
 \begin{tabular}{llllll} \hline
 Symbol & Parameter & Min & Typ & Max & Unit \\ \hline
-TL & VSENSE linearity with temperature & - & $\pm1$ & $\pm±2$ & \degree{C}\\
+TL & VSENSE linearity with temperature & - & $\pm1$ & $\pm2$ & \degree{C}\\
 Avg\_Slope & Average slope & - & 2.5 & & mV/\degree{C}\\
 V25 & Voltage at 25 \degree{C} & - & 0.76 & & V\\
 tSTART & Startup time & - & 6 & 10 & $\mu{s}$\\
