--- a/docs/sources/copyright.tex
+++ b/docs/sources/copyright.tex
@@ -33,7 +33,7 @@
 %versions, except that this permission notice may be stated in a
 %translation approved by the Free Software Foundation.
 \noindent
-\includegraphics{cc-by-nc-sa-4.0.png}
+\includegraphics{cc-by-nc-sa-4_0.png}
 
 \noindent
 This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.
