--- a/docs/sources/introduction.tex
+++ b/docs/sources/introduction.tex
@@ -16,7 +16,7 @@ The outline of the laboratory assignments to be carried out is as follows:
 \item   Tasking program.
 \item   Distributed program.
 \item   Real-time program, including temporal analysis
-\item	   Real-time program with Attitude Control System.
+\item	Real-time program with Attitude Control System.
 \item   On-board data handling (OBDH) system.
 \end{enumerate}
 
@@ -53,12 +53,12 @@ The following manuals are available from the ``Help" menu in the GNAT Programmin
 
 \begin{entry}{RAVENSCAR}
 \item[ADC] Analog to Digital Converter.
-\item[ATC] Attitude Control System
+\item[ACS] Attitude Control System.
 \item[DAC] Digital to Analog Converter.
 \item[FPU] Floating Point Unit.
 \item[GCC] GNU compilation system..
 \item[GDB] GNU Debugger.
-\item[GNAT] GNU Ada TranslatorDebugger.
+\item[GNAT] GNU Ada Translator.
 \item[GNU] GNU is not Unix.
 \item[GPL] GNU Public License.
 \item[GPS] GNAT Programming Studio.
