Changed > by rigntarrow and RTA table

--- a/docs/sources/assignment1.tex
+++ b/docs/sources/assignment1.tex
@@ -57,7 +57,7 @@ GPS organises source code in projects. A project is a set of source files which 
 Before starting you will need to create a folder to store your software projects. The recommendation is to create a folder named OBDH\_LABS in a directory of your choice.
 The next activity is to write and run a simple Ada program using GPS:
 \begin{enumerate}
-\item 	Create a new project by clicking on {\tt File} > {\tt New Project} ... in the top menu. Choose the {\tt Simple Ada Project} template.
+\item 	Create a new project by clicking on {\tt File} $\rightarrow$ {\tt New Project} ... in the top menu. Choose the {\tt Simple Ada Project} template.
 \item	Choose a folder to deploy the project, e.g. OBDH\_LABS/LAB1. Set the project name to {\tt Hello} and the main name also to {\tt Hello}.
 \item	Double click on the {\tt hello.adb} file in the project view to open the file in the working area. 
 \item	Edit the file in the working area so that it has the same content as in figure\ref{fig:gps}.
