--- a/docs/sources/assignment3.tex
+++ b/docs/sources/assignment3.tex
@@ -97,7 +97,7 @@ Notice that {\tt Run}, and hence {\tt Initialize} and {\tt OBSW}, never return. 
 Open GPS and do the following:
 \begin{enumerate}
 \item Select {\tt Open project} on the welcome window. Navigate to the LAB3 directory and open the {\tt simple\_housekeeping.gpr} project file.
-\item Build the executable and load it into the board by clicking on the \hbox{\includegraphics[width=1.5em]{debug.png}} symbol in the tool bar (or select {\tt Build} > {\tt Bareboard} > {\tt Debug} on board on the top menu).
+\item Build the executable and load it into the board by clicking on the \hbox{\includegraphics[width=1.5em]{debug.png}} symbol in the tool bar (or select {\tt Build} $\rightarrow$ {\tt Bareboard} $\rightarrow$ {\tt Debug} on board on the top menu).
 
 The program will be compiled, and the executable will be loaded into the board memory by the debugger. After that, the debugger is started\footnote{On Windows a message will be displayed requesting permission to connect st-util to external networks. Be sure to grant such permission to enable the debugger connection to the board.}, and the debugger console (lowest window in GPS) shows the following lines:
 \begin{verbatim}
@@ -106,7 +106,7 @@ The program will be compiled, and the executable will be loaded into the board m
 (gdb)
 \end{verbatim}
 
-\item Type {\tt continue} or just {\tt c} on the debugger console (or select {\tt Debug} > {\tt Continue} on the top menu).
+\item Type {\tt continue} or just {\tt c} on the debugger console (or select {\tt Debug} $\rightarrow$ {\tt Continue} on the top menu).
 \begin{verbatim}
 (gdb) c
 Continuing.
