--- a/docs/sources/assignment4.tex
+++ b/docs/sources/assignment4.tex
@@ -39,7 +39,7 @@ Open GPS and do the following:
 \begin{enumerate}
 \item Select {\tt Open project} on the welcome window. Navigate to the LAB4 directory and open the {\tt tasking\_housekeeping.gpr} project file.
 
-\item Build the executable and load it into the board by clicking on the \hbox{\includegraphics[width=1.5em]{debug.png}} symbol in the tool bar (or select {\tt Build} > {\tt Bareboard} > {\tt Debug} on board on the top menu).
+\item Build the executable and load it into the board by clicking on the \hbox{\includegraphics[width=1.5em]{debug.png}} symbol in the tool bar (or select {\tt Build} $\rightarrow$ {\tt Bareboard} $\rightarrow$ {\tt Debug} on board on the top menu).
 
 The program will be compiled, and the executable will be loaded into the board memory by the debugger. After that, the debugger is started, and the debugger console (lowest window in GPS) shows the following lines:
 \begin{verbatim}
@@ -48,7 +48,7 @@ The program will be compiled, and the executable will be loaded into the board m
 (gdb)
 \end{verbatim}
 
-\item Type {\tt continue} or just {\tt c} on the debugger console (or select {\tt Debug} > {\tt Continue} on the top menu).
+\item Type {\tt continue} or just {\tt c} on the debugger console (or select {\tt Debug} $\rightarrow$ {\tt Continue} on the top menu).
 \begin{verbatim}
 (gdb) c
 Continuing.
