--- a/docs/sources/assignment7.tex
+++ b/docs/sources/assignment7.tex
@@ -34,7 +34,7 @@ The simulink window (figure~\ref{fig:acs-simulink}) shows the high level blocks,
             \label{fig:acs-simulink}
 \end{figure}
 
-The nominal attitude control can be show by selecting {\tt Nominal Attitude Control} in the Model Browser menu (left part of simulink window) or by clicking on {\tt Satellite} > {\tt OBC} > {\tt Nominal Attitude Control} blocks.
+The nominal attitude control can be show by selecting {\tt Nominal Attitude Control} in the Model Browser menu (left part of simulink window) or by clicking on {\tt Satellite} $\rightarrow$ {\tt OBC} $\rightarrow$ {\tt Nominal Attitude Control} blocks.
 
 Nominal attitude control has three blocks (figure~\ref{fig:nac}):
 \begin{description}
@@ -128,7 +128,7 @@ In this assignment, the serial line is used to interchange data between ADCS and
 Open GPS and do the following:
 \begin{enumerate}
 \item Select {\tt Open project} on the welcome window. Navigate to the LAB7 directory and open the {\tt realtime\_housekeeping.gpr} project file.
-\item Build the executable and load it into the board using the debugger by clicking on the \hbox{\includegraphics[width=1.5em]{debug.png}} symbol in the tool bar (or select {\tt Build} > {\tt Bareboard} > {\tt Debug} on board on the top menu).
+\item Build the executable and load it into the board using the debugger by clicking on the \hbox{\includegraphics[width=1.5em]{debug.png}} symbol in the tool bar (or select {\tt Build} $\rightarrow$ {\tt Bareboard} $\rightarrow$ {\tt Debug} on board on the top menu).
 
 The program will be compiled, and the executable will be loaded into the board memory by the debugger. The debugger console (lowest window in GPS) shows the following lines:
 \begin{verbatim}
@@ -137,7 +137,7 @@ The program will be compiled, and the executable will be loaded into the board m
 (gdb)
 \end{verbatim}
 
-\item Type {\tt continue} or just {\tt c} on the debugger console (or select {\tt Debug} > {\tt Continue} on the top menu).
+\item Type {\tt continue} or just {\tt c} on the debugger console (or select {\tt Debug} $\rightarrow$ {\tt Continue} on the top menu).
 \begin{verbatim}
 (gdb) c
 Continuing.
