--- a/docs/sources/obdh.tex
+++ b/docs/sources/obdh.tex
@@ -99,7 +99,7 @@ The implementation code reflects the task structure in figure~\ref{fig:obdh-task
 Open GPS and do the following:
 \begin{enumerate}
 \item Select {\tt Open} project on the welcome window. Navigate to the PROJECT/OBDH directory and open the {\tt obdh.gpr} project file.
-\item Build the executable and load it into the board by clicking on the \hbox{\includegraphics[width=1.5em]{buildandload.png}} symbol in the tool bar (or select {\tt Build} > {\tt Bareboard} > {\tt Flash to board} on the top menu).
+\item Build the executable and load it into the board by clicking on the \hbox{\includegraphics[width=1.5em]{buildandload.png}} symbol in the tool bar (or select {\tt Build} $\rightarrow$ {\tt Bareboard} $\rightarrow$ {\tt Flash to board} on the top menu).
 
 The program will be compiled, and the executable will be loaded into the board flash memory. After that, the program starts to run on the board (check the blinking LEDs).
 \item Connect the serial cable to a USB port on the host computer, if not already done, following the instructions in section~\ref{sc:serial} of this manual.
