--- a/docs/sources/assignment5.tex
+++ b/docs/sources/assignment5.tex
@@ -127,7 +127,7 @@ The rest of the implementation is the same as in the previous project.
 Open GPS and do the following:
 \begin{enumerate}
 \item Select {\tt Open} project on the welcome window. Navigate to the LAB5 directory and open the {\tt distributed\_housekeeping.gpr} project file.
-\item Build the executable and load it into the board by clicking on the \hbox{\includegraphics[width=1.5em]{buildandload.png}} symbol in the tool bar (or select {\tt Build} > {\tt Bareboard} > {\tt Flash to board} on the top menu).
+\item Build the executable and load it into the board by clicking on the \hbox{\includegraphics[width=1.5em]{buildandload.png}} symbol in the tool bar (or select {\tt Build} $\rightarrow$ {\tt Bareboard} $\rightarrow$ {\tt Flash to board} on the top menu).
 
 The program will be compiled, and the executable will be loaded into the board flash memory. After that, the program starts to run on the board (check the blinking LEDs).
 \item Connect the serial cable to a USB port on the host computer, if not already done.
