Remove useless scape characters in *nix commands

--- a/docs/sources/assignment1.tex
+++ b/docs/sources/assignment1.tex
@@ -40,7 +40,7 @@ xcode-select -s /Applications/Xcode.app/Contents/Developer
 \item Download the file {\tt gnat-2021-20210519-x86\_64-linux-bin}
 \item You will need to make the package executable before running it. In a command prompt, execute the following command:
 \begin{verbatim}
-     chmod +x path\_to\_the\_package.bin
+     chmod +x path_to_the_package.bin
 \end{verbatim}
 and execute the package. The {\tt README.txt} file contains additional installation and execution instructions.
 \end{enumerate}
